--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -6,7 +6,7 @@
     <title>LetsBus</title>
 
     <!-- Estilo Leaflet -->
-    <link rel="stylesheet" href="http://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <!-- Estilo customizado -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
     <!-- Ícones -->
@@ -42,7 +42,7 @@
     <div id="map"></div>
 
     <!-- Scripts -->
-    <script src="http://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
   </body>
 </html>
