--- a/templates/registerpage.html
+++ b/templates/registerpage.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="campo-entrada">
-          <input type="text" class="campo-input" id="reg-tel" required />
+          <input type="tel" class="campo-input" pattern="\(\d{2}\) \d{5}-\d{4}" id="reg-tel" required />
           <label for="reg-tel" class="rotulo">Telefone</label>
           <i class="bx bx-phone icone"></i>
         </div>
