--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Login</title>
+    <title>Login - LetsBus</title>
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.png') }}" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Link CSS -->
     <link
