--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LetsBus</title>
-
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon.png') }}" type="image/png" />
     <!-- Estilo Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <!-- Estilo customizado -->
