--- a/templates/recuperar_senha.html
+++ b/templates/recuperar_senha.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Recuperar Senha</title>
+  <title>Recuperar Senha - LetsBus</title>
+  <link rel="icon" href="{{ url_for('static', filename='img/favicon.png') }}" type="image/png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/log-reg.css') }}" />
 </head>
