--- a/templates/registerpage.html
+++ b/templates/registerpage.html
@@ -60,6 +60,12 @@
       </form>
     </div>
 
+    <div id="popup-fundo-cadastro" class="popup-fundo" style="display: none;">
+      <div id="popup-sucesso-cadastro" class="popup-confirmacao">
+        <h2>Bem-vindo, <span id="nome-usuario-popup"></span>!</h2>
+        <button onclick="irParaMapa()" class="botao-popup">Ir para o mapa</button>
+      </div>
+    </div>
     <!-- JS (ordem correta!) -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
