--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,16 @@
   --z-fixado: 100;
 }
 
+/* BOTÕES EXTRAS DO SITE */
+.leaflet-control-custom {
+  box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  border-radius: 4px;
+  user-select: none;
+  width: 34px;
+  height: 34px;
+  line-height: 24px;
+}
+
 /* BUSÃO */
 .icone-onibus {
   width: 40px;
@@ -31,6 +41,87 @@
   width: 100%;
   height: 100%;
   object-fit: cover; /* preenche sem distorcer */
+}
+
+.estado-lotacao.vazio {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+  padding: 2px 6px;
+  border-radius: 4px;
+}
+
+.estado-lotacao.poucos {
+  background-color: limegreen;
+  color: black;
+  border: 2px solid black;
+  padding: 2px 6px;
+  border-radius: 4px;
+}
+
+.estado-lotacao.muitos {
+  background-color: gold;
+  color: black;
+  border: 2px solid black;
+  padding: 2px 6px;
+  border-radius: 4px;
+}
+
+.estado-lotacao.lotado {
+  background-color: darkred;
+  color: white;
+  border: 2px solid red;
+  padding: 2px 6px;
+  border-radius: 4px;
+}
+
+.popup-onibus-voto {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.botao-votar-lotacao {
+  font-weight: bold;
+  padding: 8px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  border: 2px  white;
+  background-color: blueviolet;
+  transition: background-color 0.3s;
+}
+
+.botao-voto {
+  font-weight: bold;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 2px solid black;
+  transition: background-color 0.3s;
+}
+
+.botao-voto.vazio {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+}
+
+.botao-voto.poucos {
+  background-color: limegreen;
+  color: black;
+  border: 2px solid black;
+}
+
+.botao-voto.muitos {
+  background-color: gold;
+  color: black;
+  border: 2px solid black;
+}
+
+.botao-voto.lotado {
+  background-color: darkred;
+  color: white;
+  border: 2px solid red;
 }
 
 /* RESET */
@@ -221,4 +312,63 @@ body {
 
 .popup-onibus button:hover {
     background-color: #7a1e9c; /* Cor do botão ao passar o mouse */
+}
+
+/* POPUP DO VOTO */
+#popup-fundo {
+  display: none;
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 10000;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Caixa branca do popup */
+#popup-confirmacao {
+  background: white;
+  padding: 20px 30px;
+  border-radius: 8px;
+  text-align: center;
+  max-width: 90%;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+
+  opacity: 0;
+  transform: scale(0.8);
+  animation: popupExplode 0.3s forwards;
+}
+
+@keyframes popupExplode {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+#popup-confirmacao button {
+  margin-top: 15px;
+  padding: 8px 16px;
+  background-color: blueviolet;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.2s;
+}
+
+#popup-confirmacao button:hover {
+  background-color: indigo;
 }
