--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@
 
 /* BOTÕES EXTRAS DO SITE */
 .leaflet-control-custom {
-  box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65);
   border-radius: 4px;
   user-select: none;
   width: 34px;
@@ -43,38 +43,37 @@
   object-fit: cover; /* preenche sem distorcer */
 }
 
+/* ESTADOS DE LOTAÇÃO */
+.estado-lotacao {
+  padding: 2px 6px;
+  border-radius: 4px;
+}
+
 .estado-lotacao.vazio {
   background-color: white;
   color: black;
   border: 2px solid black;
-  padding: 2px 6px;
-  border-radius: 4px;
 }
 
 .estado-lotacao.poucos {
   background-color: limegreen;
   color: black;
   border: 2px solid black;
-  padding: 2px 6px;
-  border-radius: 4px;
 }
 
 .estado-lotacao.muitos {
   background-color: gold;
   color: black;
   border: 2px solid black;
-  padding: 2px 6px;
-  border-radius: 4px;
 }
 
 .estado-lotacao.lotado {
   background-color: darkred;
   color: white;
   border: 2px solid red;
-  padding: 2px 6px;
-  border-radius: 4px;
 }
 
+/* POPUP DE VOTO */
 .popup-onibus-voto {
   display: flex;
   justify-content: center;
@@ -86,7 +85,7 @@
   padding: 8px 12px;
   border-radius: 6px;
   cursor: pointer;
-  border: 2px  white;
+  border: 2px solid white;
   background-color: blueviolet;
   transition: background-color 0.3s;
 }
@@ -287,31 +286,31 @@ body {
 
 /* CAIXA DE VOTO */
 .popup-onibus {
-    background-color: #f9f9f9; /* Cor de fundo */
-    border: 2px solid #8a2be2; /* Cor da borda */
-    border-radius: 8px; /* Bordas arredondadas */
-    padding: 15px; /* Espaçamento interno */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
-    text-align: center; /* Centraliza o texto */
+  background-color: #f9f9f9; /* Cor de fundo */
+  border: 2px solid #8a2be2; /* Cor da borda */
+  border-radius: 8px; /* Bordas arredondadas */
+  padding: 15px; /* Espaçamento interno */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
+  text-align: center; /* Centraliza o texto */
 }
 
 .popup-onibus h4 {
-    margin-bottom: 10px; /* Espaçamento abaixo do título */
-    color: #333; /* Cor do texto */
+  margin-bottom: 10px; /* Espaçamento abaixo do título */
+  color: var(--cor-branca); /* Cor do texto */
 }
 
 .popup-onibus button {
-    background-color: #8a2be2; /* Cor do botão */
-    color: white; /* Cor do texto do botão */
-    border: none; /* Remove a borda padrão */
-    border-radius: 5px; /* Bordas arredondadas do botão */
-    padding: 10px 15px; /* Espaçamento interno do botão */
-    cursor: pointer; /* Muda o cursor para indicar que é clicável */
-    transition: background-color 0.3s; /* Transição suave para a cor de fundo */
+  background-color: #8a2be2; /* Cor do botão */
+  color: white; /* Cor do texto do botão */
+  border: none; /* Remove a borda padrão */
+  border-radius: 5px; /* Bordas arredondadas do botão */
+  padding: 10px 15px; /* Espaçamento interno do botão */
+  cursor: pointer; /* Muda o cursor para indicar que é clicável */
+  transition: background-color 0.3s; /* Transição suave para a cor de fundo */
 }
 
 .popup-onibus button:hover {
-    background-color: #7a1e9c; /* Cor do botão ao passar o mouse */
+  background-color: #7a1e9c; /* Cor do botão ao passar o mouse */
 }
 
 /* POPUP DO VOTO */
@@ -319,7 +318,7 @@ body {
   display: none;
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 10000;
 
   display: flex;
@@ -334,7 +333,7 @@ body {
   border-radius: 8px;
   text-align: center;
   max-width: 90%;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 
   opacity: 0;
   transform: scale(0.8);
